add cc-pVXZ-F12 and cc-pVXZ-F12-CABS (X=D, T, Q) basis sets for Li, Be, Na, and Mg

--- a/lib/basis/cc-pvdz-f12-cabs.kv
+++ b/lib/basis/cc-pvdz-f12-cabs.kv
@@ -1,5 +1,6 @@
 % Recovered from: http://tyr0.chem.wsu.edu/~kipeters/basissets/optri1_basis.html
 % Published in: K.E. Yousaf and K.A. Peterson, J. Chem. Phys. 129, 184108 (2008).
+% Li Be Na Mg: from EMSL Basis Set Exchange Library, J. Grant Hill and Kirk A. Peterson, Phys. Chem. Chem. Phys. 12, 10460 (2010)  
 % Auxiliary RI (OptRI) matched to the cc-pVnZ-F12 Basis Set
 % This should be used within the CABS/CABS+ framework with the above orbital set
 basis:hydrogen:"cc-pVDZ-F12-CABS": [
@@ -27,6 +28,108 @@ basis:hydrogen:"cc-pVDZ-F12-CABS": [
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
                   4.585007000000e-01               1.000000000000e+00})
+]
+
+basis:lithium:"cc-pVDZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.537126000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.125887000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.747470000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.102720000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.997171000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.075101000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.793470000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.409190000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  5.642437000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  2.119040000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  9.176880000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.499150000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  5.538977000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  2.955732000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  8.517340000000e-02               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  2.690192000000e-01               1.000000000000e+00})
+]
+
+basis:beryllium:"cc-pVDZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  8.779700000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.595400000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.143600000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.915000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  9.745900000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.901600000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  9.412000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.230000000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  8.795200000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  4.741100000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.989800000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  8.909740000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.195245700000e+00               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  3.501042000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  8.898930000000e-02               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  5.609638000000e-01               1.000000000000e+00})
 ]
 
 basis:boron:"cc-pVDZ-F12-CABS": [
@@ -333,6 +436,114 @@ basis:neon:"cc-pVDZ-F12-CABS": [
   (type: [(am = G puream = 1)]
     {exp coef:0} = {
                   2.867725000000e+00               1.000000000000e+00})
+]
+
+basis:sodium:"cc-pVDZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.934741000000e+00               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.486070000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  9.267600000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.185500000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.089199300000e+01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.200796000000e+00               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.334490000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  6.861900000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.150700000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  5.531544000000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.157640000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.445770000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  8.498700000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  7.110334000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  2.653676000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  4.613480000000e-02               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  2.382696100000e+00               1.000000000000e+00})
+]
+
+basis:magnesium:"cc-pVDZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.503953000000e+00               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.288600000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.860400000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.546500000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  7.221093000000e+00               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.504399000000e+00               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.797700000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.288007000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.769700000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  5.746645000000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  8.879130000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  5.971400000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.335350000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  9.318021000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  5.929790000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  2.338778000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  2.660970000000e-01               1.000000000000e+00})
 ]
 
 basis:aluminum:"cc-pVDZ-F12-CABS": [
