--- a/lib/basis/cc-pvdz-f12.kv
+++ b/lib/basis/cc-pvdz-f12.kv
@@ -1,5 +1,6 @@
 % Recovered from: http://tyr0.chem.wsu.edu/~kipeters/basissets/f12basis.html
 % Published in: K.A. Peterson, T.B. Adler, H.-J. Werner, J. Chem. Phys. 128, 084102 (2008)
+% Li Be Na Mg: from EMSL Basis Set Exchange Library, J. Grant Hill and Kirk A. Peterson, Phys. Chem. Chem. Phys. 12, 10460 (2010)  
 % correlation consistent polarized Valence Double-Zeta F12 Basis Set
 % ** Recommended F12 exponent is 0.9 **
 basis:hydrogen:"cc-pVDZ-F12": [
@@ -48,6 +49,118 @@ basis:helium:"cc-pVDZ-F12": [
   (type: [(am = P puream = 1)]
     {exp coef:0} = {
                   3.590000000000e-01               1.000000000000e+00})
+]
+
+basis:lithium:"cc-pVDZ-F12": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.988000000000e+03               1.330000000000e-04
+                  8.989000000000e+02               1.025000000000e-03
+                  2.059000000000e+02               5.272000000000e-03
+                  5.924000000000e+01               2.092900000000e-02
+                  1.987000000000e+01               6.634000000000e-02
+                  7.406000000000e+00               1.657750000000e-01
+                  2.930000000000e+00               3.150380000000e-01
+                  1.189000000000e+00               3.935230000000e-01
+                  4.798000000000e-01               1.908700000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.988000000000e+03              -2.100000000000e-05
+                  8.989000000000e+02              -1.610000000000e-04
+                  2.059000000000e+02              -8.200000000000e-04
+                  5.924000000000e+01              -3.326000000000e-03
+                  1.987000000000e+01              -1.051900000000e-02
+                  7.406000000000e+00              -2.809700000000e-02
+                  2.930000000000e+00              -5.593600000000e-02
+                  1.189000000000e+00              -9.923700000000e-02
+                  4.798000000000e-01              -1.121890000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  7.509000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.832000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  7.600000000000e-03               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.266000000000e+00               8.630000000000e-03
+                  6.511000000000e-01               4.753800000000e-02})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.696000000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  5.578000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.050000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  9.100000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.484380000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  6.847300000000e-02               1.000000000000e+00})
+]
+
+basis:beryllium:"cc-pVDZ-F12": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.863000000000e+03               2.360000000000e-04
+                  1.030000000000e+03               1.826000000000e-03
+                  2.347000000000e+02               9.452000000000e-03
+                  6.656000000000e+01               3.795700000000e-02
+                  2.169000000000e+01               1.199650000000e-01
+                  7.734000000000e+00               2.821620000000e-01
+                  2.916000000000e+00               4.274040000000e-01
+                  1.130000000000e+00               2.662780000000e-01
+                  1.101000000000e-01              -7.275000000000e-03})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.863000000000e+03              -4.300000000000e-05
+                  1.030000000000e+03              -3.330000000000e-04
+                  2.347000000000e+02              -1.736000000000e-03
+                  6.656000000000e+01              -7.012000000000e-03
+                  2.169000000000e+01              -2.312600000000e-02
+                  7.734000000000e+00              -5.813800000000e-02
+                  2.916000000000e+00              -1.145560000000e-01
+                  1.130000000000e+00              -1.359080000000e-01
+                  1.101000000000e-01               5.774410000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.577000000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.409000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.470000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  7.436000000000e+00               1.073600000000e-02
+                  1.577000000000e+00               6.285400000000e-02})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.352000000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.438000000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.994000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  9.300000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  2.992840000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.250500000000e-01               1.000000000000e+00})
 ]
 
 basis:boron:"cc-pVDZ-F12": [
@@ -414,6 +527,209 @@ basis:neon:"cc-pVDZ-F12": [
   (type: [(am = D puream = 1)]
     {exp coef:0} = {
                   7.471000000000e-01               1.000000000000e+00})
+]
+
+basis:sodium:"cc-pVDZ-F12": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.230000000000e+05               1.810000000000e-05
+                  6.334000000000e+04               1.404000000000e-04
+                  1.441000000000e+04               7.384000000000e-04
+                  4.077000000000e+03               3.111800000000e-03
+                  1.328000000000e+03               1.120810000000e-02
+                  4.786000000000e+02               3.528280000000e-02
+                  1.862000000000e+02               9.598970000000e-02
+                  7.692000000000e+01               2.137350000000e-01
+                  3.332000000000e+01               3.486880000000e-01
+                  1.500000000000e+01               3.245660000000e-01
+                  6.869000000000e+00               1.126330000000e-01
+                  2.683000000000e+00               7.068000000000e-03
+                  1.109000000000e+00               5.980000000000e-04
+                  6.015000000000e-02              -5.300000000000e-06})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.230000000000e+05              -4.400000000000e-06
+                  6.334000000000e+04              -3.430000000000e-05
+                  1.441000000000e+04              -1.801000000000e-04
+                  4.077000000000e+03              -7.639000000000e-04
+                  1.328000000000e+03              -2.752500000000e-03
+                  4.786000000000e+02              -8.860200000000e-03
+                  1.862000000000e+02              -2.479390000000e-02
+                  7.692000000000e+01              -6.059950000000e-02
+                  3.332000000000e+01              -1.164460000000e-01
+                  1.500000000000e+01              -1.624370000000e-01
+                  6.869000000000e+00              -4.388910000000e-02
+                  2.683000000000e+00               3.379170000000e-01
+                  1.109000000000e+00               5.613470000000e-01
+                  6.015000000000e-02               4.067500000000e-03})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.230000000000e+05               7.000000000000e-07
+                  6.334000000000e+04               5.200000000000e-06
+                  1.441000000000e+04               2.710000000000e-05
+                  4.077000000000e+03               1.146000000000e-04
+                  1.328000000000e+03               4.151000000000e-04
+                  4.786000000000e+02               1.329800000000e-03
+                  1.862000000000e+02               3.756000000000e-03
+                  7.692000000000e+01               9.140300000000e-03
+                  3.332000000000e+01               1.798590000000e-02
+                  1.500000000000e+01               2.514770000000e-02
+                  6.869000000000e+00               7.635200000000e-03
+                  2.683000000000e+00              -6.145890000000e-02
+                  1.109000000000e+00              -1.157210000000e-01
+                  6.015000000000e-02               6.264060000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.540000000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.382000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.700000000000e-03               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.433000000000e+02               2.243900000000e-03
+                  5.739000000000e+01               1.739970000000e-02
+                  1.810000000000e+01               7.741250000000e-02
+                  6.575000000000e+00               2.191020000000e-01
+                  2.521000000000e+00               3.785220000000e-01
+                  9.607000000000e-01               3.949020000000e-01
+                  3.512000000000e-01               1.604240000000e-01
+                  9.827000000000e-02               2.333100000000e-03
+                  3.734000000000e-02               1.995400000000e-03})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.433000000000e+02              -2.224000000000e-04
+                  5.739000000000e+01              -1.742800000000e-03
+                  1.810000000000e+01              -7.754600000000e-03
+                  6.575000000000e+00              -2.251870000000e-02
+                  2.521000000000e+00              -3.843300000000e-02
+                  9.607000000000e-01              -4.501770000000e-02
+                  3.512000000000e-01              -1.921320000000e-02
+                  9.827000000000e-02               1.826970000000e-01
+                  3.734000000000e-02               5.578970000000e-01})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.500000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  6.000000000000e-03               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.334286000000e+00               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  8.836200000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  8.963110000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.107450000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  5.617600000000e-02               1.000000000000e+00})
+]
+
+basis:magnesium:"cc-pVDZ-F12": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.649000000000e+05               7.300000000000e-05
+                  2.471000000000e+04               5.667000000000e-04
+                  5.628000000000e+03               2.962700000000e-03
+                  1.596000000000e+03               1.229620000000e-02
+                  5.210000000000e+02               4.273240000000e-02
+                  1.880000000000e+02               1.230130000000e-01
+                  7.301000000000e+01               2.748320000000e-01
+                  2.990000000000e+01               4.018180000000e-01
+                  1.254000000000e+01               2.646970000000e-01
+                  4.306000000000e+00               3.326120000000e-02
+                  1.826000000000e+00              -4.413300000000e-03
+                  7.417000000000e-01               2.060200000000e-03
+                  7.612000000000e-02               7.082000000000e-04})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.649000000000e+05              -1.840000000000e-05
+                  2.471000000000e+04              -1.435000000000e-04
+                  5.628000000000e+03              -7.487000000000e-04
+                  1.596000000000e+03              -3.144100000000e-03
+                  5.210000000000e+02              -1.104810000000e-02
+                  1.880000000000e+02              -3.360580000000e-02
+                  7.301000000000e+01              -8.259460000000e-02
+                  2.990000000000e+01              -1.593140000000e-01
+                  1.254000000000e+01              -1.528880000000e-01
+                  4.306000000000e+00               1.908490000000e-01
+                  1.826000000000e+00               5.799640000000e-01
+                  7.417000000000e-01               3.720290000000e-01
+                  7.612000000000e-02              -1.193440000000e-02})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.649000000000e+05               3.600000000000e-06
+                  2.471000000000e+04               2.760000000000e-05
+                  5.628000000000e+03               1.444000000000e-04
+                  1.596000000000e+03               6.057000000000e-04
+                  5.210000000000e+02               2.135300000000e-03
+                  1.880000000000e+02               6.499300000000e-03
+                  7.301000000000e+01               1.614460000000e-02
+                  2.990000000000e+01               3.157660000000e-02
+                  1.254000000000e+01               3.163740000000e-02
+                  4.306000000000e+00              -4.391400000000e-02
+                  1.826000000000e+00              -1.510930000000e-01
+                  7.417000000000e-01              -2.176680000000e-01
+                  7.612000000000e-02               5.472450000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.457000000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.310000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.200000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.169000000000e+02               2.075300000000e-03
+                  7.486000000000e+01               1.628690000000e-02
+                  2.372000000000e+01               7.386970000000e-02
+                  8.669000000000e+00               2.142970000000e-01
+                  3.363000000000e+00               3.821540000000e-01
+                  1.310000000000e+00               3.981780000000e-01
+                  4.911000000000e-01               1.528780000000e-01
+                  2.364000000000e-01              -4.375400000000e-03
+                  8.733000000000e-02               6.295800000000e-03})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.169000000000e+02              -3.297000000000e-04
+                  7.486000000000e+01              -2.587500000000e-03
+                  2.372000000000e+01              -1.191200000000e-02
+                  8.669000000000e+00              -3.502270000000e-02
+                  3.363000000000e+00              -6.399680000000e-02
+                  1.310000000000e+00              -7.044360000000e-02
+                  4.911000000000e-01              -3.758360000000e-02
+                  2.364000000000e-01               1.770430000000e-01
+                  8.733000000000e-02               5.667070000000e-01})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.237000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  9.000000000000e-03               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.182039000000e+00               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.718480000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.431308000000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.994320000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  9.093700000000e-02               1.000000000000e+00})
 ]
 
 basis:aluminum:"cc-pVDZ-F12": [
