--- a/lib/basis/cc-pvqz-f12-cabs.kv
+++ b/lib/basis/cc-pvqz-f12-cabs.kv
@@ -1,5 +1,6 @@
 % Recovered from: http://tyr0.chem.wsu.edu/~kipeters/basissets/optri1_basis.html
 % Published in: K.E. Yousaf and K.A. Peterson, J. Chem. Phys. 129, 184108 (2008).
+% Li Be Na Mg: from EMSL Basis Set Exchange Library, J. Grant Hill and Kirk A. Peterson, Phys. Chem. Chem. Phys. 12, 10460 (2010)
 % Auxiliary RI (OptRI) matched to the cc-pVnZ-F12 Basis Set 
 % This should be used within the CABS/CABS+ framework with the above orbital set
 basis:hydrogen:"cc-pVQZ-F12-CABS": [
@@ -39,6 +40,120 @@ basis:hydrogen:"cc-pVQZ-F12-CABS": [
   (type: [(am = G puream = 1)]
     {exp coef:0} = {
                   1.260787000000e+00               1.000000000000e+00})
+]
+
+basis:lithium:"cc-pVQZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  8.451985000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.488790000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.465000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.016190000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.085754200000e+00               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.297834000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.095952000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.437390000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  2.506925600000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.218996400000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  6.375434000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  6.943150000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  6.821848000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  2.698737000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  5.436960000000e-02               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  7.895759000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  2.548198000000e-01               1.000000000000e+00})
+  (type: [(am = H puream = 1)]
+    {exp coef:0} = {
+                  2.146354000000e-01               1.000000000000e+00})
+]
+
+basis:beryllium:"cc-pVQZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.153847600000e+00               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.789828000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.464629000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  7.596450000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.678966600000e+00               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  8.663593000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.320433000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.371140000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.383150100000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  6.313387000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.584863000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.529038000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.566109400000e+00               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  8.580755000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  3.125031000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  4.468738000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  2.180355000000e-01               1.000000000000e+00})
+  (type: [(am = H puream = 1)]
+    {exp coef:0} = {
+                  4.737481000000e-01               1.000000000000e+00})
 ]
 
 basis:boron:"cc-pVQZ-F12-CABS": [
@@ -381,6 +496,120 @@ basis:neon:"cc-pVQZ-F12-CABS": [
   (type: [(am = H puream = 1)]
     {exp coef:0} = {
                   3.450493000000e+00               1.000000000000e+00})
+]
+
+basis:sodium:"cc-pVQZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  9.707935000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.642263000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.450490000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.601370000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  9.788400000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.001723000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.745833000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  7.713660000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  6.818929300000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.164611000000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  7.472029000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.779187000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  7.656361000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  2.363150000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.406358000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  2.680699000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  2.056775000000e-01               1.000000000000e+00})
+  (type: [(am = H puream = 1)]
+    {exp coef:0} = {
+                  9.191600000000e-02               1.000000000000e+00})
+]
+
+basis:magnesium:"cc-pVQZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.313088100000e+00               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.607942000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.002906000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.875050000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.024592900000e+00               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.322582000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.218831000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  6.297150000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.998866300000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.197380800000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  2.727999000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.527236000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.637241400000e+00               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  6.931314000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  2.326890000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  6.677045000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  5.124749000000e-01               1.000000000000e+00})
+  (type: [(am = H puream = 1)]
+    {exp coef:0} = {
+                  1.189690000000e-01               1.000000000000e+00})
 ]
 
 basis:aluminum:"cc-pVQZ-F12-CABS": [
