--- a/lib/basis/cc-pvtz-f12-cabs.kv
+++ b/lib/basis/cc-pvtz-f12-cabs.kv
@@ -1,5 +1,6 @@
 % Recovered from: http://tyr0.chem.wsu.edu/~kipeters/basissets/optri1_basis.html
 % Published in: K.E. Yousaf and K.A. Peterson, J. Chem. Phys. 129, 184108 (2008).
+% Li Be Na Mg: from EMSL Basis Set Exchange Library, J. Grant Hill and Kirk A. Peterson, Phys. Chem. Chem. Phys. 12, 10460 (2010)
 % Auxiliary RI (OptRI) matched to the cc-pVnZ-F12 Basis Set 
 % This should be used within the CABS/CABS+ framework with the above orbital set
 basis:hydrogen:"cc-pVTZ-F12-CABS": [
@@ -36,6 +37,114 @@ basis:hydrogen:"cc-pVTZ-F12-CABS": [
   (type: [(am = F puream = 1)]
     {exp coef:0} = {
                   7.387620000000e-01               1.000000000000e+00})
+]
+
+basis:lithium:"cc-pVTZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.844895000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.519010000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.057930000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  9.960900000000e-03               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  7.984189000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.420359000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  6.768420000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.963570000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  7.369421000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.672918000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  8.472810000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.983370000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  7.925600000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  2.219588000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.256544000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  6.243343000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  2.964878000000e-01               1.000000000000e+00})
+]
+
+basis:beryllium:"cc-pVTZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.038925300000e+00               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.931279000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  7.216840000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.547190000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.845899400000e+00               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  5.398595000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.471792000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  5.582620000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  2.464530000000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.587744000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.399834000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  7.443740000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.066306700000e+00               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  4.427746000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.896596000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  6.293324000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  2.806803000000e-01               1.000000000000e+00})
 ]
 
 basis:boron:"cc-pVTZ-F12-CABS": [
@@ -360,6 +469,114 @@ basis:neon:"cc-pVTZ-F12-CABS": [
   (type: [(am = G puream = 1)]
     {exp coef:0} = {
                   1.709522000000e+00               1.000000000000e+00})
+]
+
+basis:sodium:"cc-pVTZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.023291000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.260291000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.964700000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.142340000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.944972700000e+00               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.577999000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.569070000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.977460000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  5.674822500000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  4.398375000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.158845000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  6.741000000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  4.993634000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  3.153051000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  9.688780000000e-02               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  7.776060000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  4.739351000000e-01               1.000000000000e+00})
+]
+
+basis:magnesium:"cc-pVTZ-F12-CABS": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.865599000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.084766000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.235470000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.354630000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  6.317355700000e+00               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.238647000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  9.394480000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.107850000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.002694800000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  6.091932000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.794731000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.010276000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.258900900000e+00               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  2.936068000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.418959000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  3.813321000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  1.973197000000e-01               1.000000000000e+00})
 ]
 
 basis:aluminum:"cc-pVTZ-F12-CABS": [
